<resources>
    <string name="app_name">MyGitHub</string>
    <string name="client_id">76c264275be270b94f24</string>
    <string name="client_secret">0b23727481f30a079e5b54d2e71a0f8783457543</string>

    <string name="enter_username_hint">Enter User name</string>
    <string name="default_debug_username">google</string>
    <string name="start_button_text">Start</string>
    <string name="username_empty_error">User name could not be empty</string>
    <string name="dialog_title_request_userifo">Verifying user information...</string>
    <string name="please_wait">Please wait</string>
    <string name="error_user_does_not_exist">Please check your information</string>
    <string name="error_internet_not_available">Please check your Internet connection</string>
    <string name="unknown_str">Unknown</string>
    <string name="menu_search">Search</string>

    <!-- Description Fragment -->
    <string name="description_absent">There is no description</string>
    <string name="description_home_page">Home Page: %s</string>
    <string name="description_language">Language: %s</string>
    <string name="description_size">Size: %s</string>
    <string name="description_open_issues">Open Issues: %s</string>
    <string name="description_forks_count">Forks Count: %s</string>

    <!-- Drawer menu -->
    <string name="drawer_developer_mode">You are in developer mode, which does not work for user apk</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Drawer menu :: Developer mode -->
    <string name="drawer_menu_first">First menu</string>
    <string name="drawer_menu_view_repositories">View Repositories:</string>
    <string name="drawer_menu_view_repositories_list_view">List View</string>
    <string name="drawer_menu_view_repositories_grid_view">Grid View</string>
    <string name="drawer_menu_view_repositories_staggered_grid_view">Staggered Grid View</string>
    <string name="drawer_menu_logging">Logging</string>
    <string name="drawer_menu_logging_app">App</string>
    <string name="drawer_menu_logging_leakcanary">LeakCanary</string>
    <string name="drawer_menu_logging_picasso">Picasso</string>

</resources>
